--- a/practice/index.html
+++ b/practice/index.html
@@ -3,7 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Float</title>
+    <style>
+      section {
+        float: left;
+        width: 70%;
+        border: 2px solid blue;
+      }
+      aside {
+        float: right;
+        width: 29%;
+        border: 2px solid blue;
+      }
+    </style>
   </head>
-  <body></body>
+  <body>
+    <header>Header</header>
+    <section>Section</section>
+    <aside>Aside</aside>
+    <footer>Footer</footer>
+  </body>
 </html>
