width of section

--- a/practice/index.html
+++ b/practice/index.html
@@ -4,16 +4,38 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Float</title>
+    <!--
+      Сначала
+      Normalize
+      -->
+    <link rel="stylesheet" href="/styles/normalize.css" />
     <style>
+      header {
+        width: 100vw;
+        height: 10vh;
+        background: forestgreen;
+      }
       section {
         float: left;
-        width: 70%;
+        width: 63%;
+        height: 30vh;
         border: 2px solid blue;
+        background: forestgreen;
+        margin: 0 1.5%;
       }
       aside {
         float: right;
         width: 29%;
+        height: 30vh;
         border: 2px solid blue;
+        background: forestgreen;
+        margin: 0 1.5%;
+      }
+      footer {
+        width: 100vh;
+        height: 10vh;
+        background: forestgreen;
+        margin: 0 1.5%;
       }
     </style>
   </head>
