--- a/practice/grid_practice.html
+++ b/practice/grid_practice.html
@@ -16,9 +16,10 @@
               grid-template-columns: 200px 150px 50px;
               grid-template-rows: 150px; 250px 100px;
             }
+            /* Ячейки сдвигают границы по линиям через слэш */
             .cell7{
-      grid-column: 2/3;
-      grid-row: 1/2;
+      grid-column: 1/3;
+      grid-row: 1/3;
             }
     </style>
   </head>
@@ -33,7 +34,7 @@
       <div class="cell cell4" style="background-color: blueviolet">4</div>
       <div class="cell cell5" style="background-color: brown">5</div>
       <div class="cell cell6" style="background-color: blanchedalmond">6</div>
-      <div class="cell cell7" style="background-color: antiquewhite">7</div>
+      <div class="cell cell7" style="background-color: rgb(156, 96, 18)">7</div>
       <div class="cell cell8" style="background-color: aquamarine">8</div>
       <div class="cell cell9" style="background-color: rgb(43, 156, 156)">
         9
