--- a/practice/grid_practice.html
+++ b/practice/grid_practice.html
@@ -5,23 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grid Practice</title>
     <style>
-            .cell {
-              color: aliceblue;
-              font-size: 16px;
-              text-align: center;
-              padding: 10px;
-                          }
-            .containter {
-              display: grid;
-              grid-template-columns: 1fr 2fr 100px;
-              grid-template-rows: 150px; 250px 100px;
-              grid-gap: 10px;
-            }
-            /* Ячейки сдвигают границы по линиям через слэш */
-            .cell7{
-      grid-column: 1/3;
-      grid-row: 1/3;
-            }
+      .cell {
+        color: aliceblue;
+        font-size: 16px;
+        text-align: center;
+        padding: 10px;
+      }
+      .containter {
+        display: grid;
+        grid-template-columns: 1fr 1fr 100px;
+        grid-template-rows: 1 fr 1 fr 100px;
+        grid-gap: 10px;
+      }
+      /* Ячейки сдвигают границы по линиям через слэш */
+      .cell7 {
+        grid-column: 1/3;
+        grid-row: 1/3;
+      }
     </style>
   </head>
   <body>
