--- a/grid_practice.html
+++ b/grid_practice.html
@@ -3,94 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grid Practice</title>
-    <style>
-        .containter {
-        display: grid;
-        grid-template-columns: 2fr 1fr 1fr 500px;
-        grid-template-rows: 80px 20% 20% 100px;
-        grid-gap: 10px;
-        width: 100vw;
-        height: 90vh;
-        font-size: 24px;
-        color: white;
-        text-align: center;
-      }
-      .header {
-        grid-row: 1/2;
-        grid-column: 1/5;
-      }
-      .sidebar {
-        grid-row: 2/5;
-        grid-column: 4/5;
-      }
-      .main-content {
-        grid-row: 2/5;
-        grid-column: 1/4;
-      }
-      .content-1 {
-        grid-row: 3/4;
-        grid-column: 1/2;
-      }
-      .content-2 {
-        grid-row: 3/4;
-        grid-column: 2/4;
-      }
-      .content-3 {
-        grid-row: 4/5;
-        grid-column: 1/4;
-      }
-      .footer {
-        grid-row: 5/6;
-        grid-column: 1/5;
-      }
-      .footer1 {
-        grid-row: 5/6;
-        grid-column: 1/2;
-      }
-      .footer2 {
-        grid-row: 5/6;
-        grid-column: 2/3;
-      }
-      .footer3 {
-        grid-row: 5/6;
-        grid-column: 3/4;
-      }
-      .footer4 {
-        grid-row: 5/6;
-        grid-column: 4/5;
-      }
-    </style>
+    <title>Grid page</title>
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/style2.css" />
   </head>
   <body>
     <h1>Grid</h1>
     <div class="containter">
-      <div class="header" style="background-color: antiquewhite">Шапка</div>
-      <div class="sidebar" style="background-color: aquamarine">
-        Боковая часть
-      </div>
-      <div class="main-content" style="background-color: rgb(33, 131, 131)">
-        Основная часть
-      </div>
-      <div class="content-1" style="background-color: blueviolet">Еще 1</div>
-      <div class="content-2" style="background-color: brown">Еще 2</div>
-      <div class="content-3" style="background-color: rgb(158, 114, 48)">
-        Еще 3
-      </div>
-      <div class="footer" style="background-color: rgb(165, 129, 82)"></div>
-      <div class="footer1" style="background-color: aquamarine">
-        Секция футера 1
-      </div>
-      <div class="footer2" style="background-color: rgb(43, 156, 156)">
-        Секция футера 2
-      </div>
-      <div class="footer3" style="background-color: blueviolet">
-        Секция футера 3
-      </div>
-      <div class="footer4" style="background-color: brown">
-        Секция футера 4
-      </div>
-      </div>
+      <div class="header">Шапка</div>
+      <div class="sidebar">Боковая часть</div>
+      <div class="main-content">Основная часть</div>
+      <div class="content-1">Еще 1</div>
+      <div class="content-2">Еще 2</div>
+      <div class="content-3">Еще 3</div>
+      <div class="footer">Футер</div>
+      <div class="footer1">Секция футера 1</div>
+      <div class="footer2">Секция футера 2</div>
+      <div class="footer3">Секция футера 3</div>
+      <div class="footer4">Секция футера 4</div>
     </div>
   </body>
 </html>
