--- a/grid_page.html
+++ b/grid_page.html
@@ -3,19 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Grid page</title>
     <link rel="stylesheet" href="styles/normalize.css" />
-    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/style2.css" />
   </head>
   <body>
+    <h1>Grid</h1>
     <div class="containter">
-      <header class="header">Шапка страницы</header>
-      <aside class="sidebar">Боковая область</aside>
+      <div class="header">Шапка</div>
+      <div class="sidebar">Боковая часть</div>
       <div class="main-content">Основная часть</div>
       <div class="content-1">Еще 1</div>
       <div class="content-2">Еще 2</div>
       <div class="content-3">Еще 3</div>
-      <footer class="footer"></footer>
+      <div class="footer">Футер</div>
+      <div class="footer1">Секция футера 1</div>
+      <div class="footer2">Секция футера 2</div>
+      <div class="footer3">Секция футера 3</div>
+      <div class="footer4">Секция футера 4</div>
     </div>
   </body>
 </html>
