grid doesn't work

--- a/figma_grid_page.html
+++ b/figma_grid_page.html
@@ -5,16 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/style3.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&family=Roboto:ital,wght@0,400;1,300;1,400&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="containter">
-      <header class="header">Шапка страницы</header>
-      <aside class="sidebar">Боковая область</aside>
-      <div class="main-content">Основная часть</div>
-      <div class="content-1">Еще 1</div>
-      <div class="content-2">Еще 2</div>
-      <div class="content-3">Еще 3</div>
-      <footer class="footer"></footer>
+      <div class="header">Header</div>
+      <div class="sidebar">Aside</div>
+      <div class="form">
+        <h1>Get Started Now</h1>
+      </div>
+        <fieldset class="form_contact-info">
+        <legend class="form_contact-info_legend">
+          <br />
+        </legend>
+        <label for="name">Name:</label>
+        <input type="text" id="name" />
+        <label for="email">Адрес электронной почты:</label>
+        <input type="text" id="email" />
+        <label for="tel">Номер телефона:</label>
+        <input type="text" id="tel" />
+      </fieldset>
+      </div>
+      <div class="footer"></div>
+      <div class="footer1">Секция футера 1</div>
+      <div class="footer2">Секция футера 2</div>
+      <div class="footer3">Секция футера 3</div>
+      <div class="footer4">Секция футера 4</div>
+    </div>
     </div>
   </body>
 </html>
