--- a/figma_grid_page.html
+++ b/figma_grid_page.html
@@ -14,12 +14,11 @@
     />
   </head>
   <body>
-    <div class="containter">
+    <div class="container">
       <div class="header">Header</div>
-      <div class="sidebar">Aside</div>
-      <div class="form">
+      <div class="sidebar"><img src="assets/images/monstera_leaves.svg" alt="an image of leaves"></div>
+      <div class="flex-container">
         <h1>Get Started Now</h1>
-      </div>
         <fieldset class="form_contact-info">
         <legend class="form_contact-info_legend">
           <br />
@@ -30,7 +29,7 @@
         <input type="text" id="email" />
         <label for="tel">Номер телефона:</label>
         <input type="text" id="tel" />
-      </fieldset>
+      </fieldset></div>
       </div>
       <div class="footer"></div>
       <div class="footer1">Секция футера 1</div>
