--- a/grid_page.html
+++ b/grid_page.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grid page</title>
-    <link rel="stylesheet" href="yles/normalize.css" />
-    <link rel="stylesheet" href="styles/style2.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <h1>Grid</h1>
